[B]3.0.47[/B] (26.11.2013)
- TvTunes updated to version 4.0.1
- Swedish language updated

[B]3.0.46[/B] (20.08.2013)
- Fanart View for Movie Sets
- few bug-/layout-fixes
- Startup animation configurable
- deprecated settings removed
- Random Fanart Backdrops on Home re-added
- extrafanart support switched to script.extendedinfo (optional, "old" local file still supported)

[B]3.0.45[/B] (05.04.2013)
- Bugfix for loading smartplylists at startup
- Optimized png textures to save some megabytes 
- Library Editor thnx to phil65 again available in the Info Dialog for movies (episodes etc. to come - follow thread)
- Switched from in-skin script.favourites to latest version 4.0.8 - just download from mirror
- Configurable clearlogo for TV Shows in the recent/recommended/custom playlists view added
- Overlay icon added for movies/episodes in progress - now configurable
- Since Add-on Metadata Actors seems to work with Frodo - support added/updated
- Added startup loading screen - if negative voices arise I'll make it optional Smile
- Added seekslider in VideoOSD 
- Rightlist view modified for Movie Sets (requires script.extendedinfo)

[B]3.0.35[/B] (21.02.2013)

- Update from eden to frodo getting latest svn version 2.0.9
- Reduced artwork filesize
- Removal of double textstrings in language files
- Color value "orange" replaced by "accent"
- updated Weather section
- 10 Day weather forecast

- Discart support for Rightlist Logo view
- fixed Discart animation on Showcase Views
- fixed Recommended, Recently added Widget
- fixed Genre display on Rightlist view
- fixed acces to fanart to latest ListItem properties

- Languages cleand up
- removed script.library.editor
- Trailer flag position fixed
- random fanart backdrop removed - not supported anymore
- left blade cleaned up (scrolling supported)

- TV Guide functioning again (partially)