@@ -1,23 +1,23 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <addon id="skin.cirrus.extended.v3" name="Cirrus Extended V3" version="3.0.47" provider-name="butchabay-Paradix-YoHan">
-    <requires>
-        <import addon="xbmc.gui" version="4.0.0"/>
-        <import addon="service.skin.widgets" version="0.0.2"/>
-        <import addon="script.artistslideshow" version="1.5.0"/>
-        <import addon="script.artwork.downloader" version="12.0.14"/>
-        <import addon="script.tv.show.next.aired" version="5.0.5"/>
-        <import addon="script.tvtunes" version="4.0.1"/>
-        <import addon="script.simpleplaylists" version="1.1.0"/>
-        <import addon="script.favourites" version="4.0.8"/>
-    </requires>
-    <extension point="xbmc.gui.skin" defaultresolution="720p" defaultresolutionwide="720p" defaultthemename="textures.xbt" effectslowdown="0.75" debugging="false">
-        <res width="1280" height="720" aspect="16:9" default="true" folder="720p" />
-    </extension> 
-    <extension point="xbmc.addon.metadata">
-        <summary lang="en">skin created by crookas - modded by butchabay, malexx and more.</summary> 
-        <description lang="en">mod based on cirrus</description>
-        <disclaimer lang="en">no official skin use at your own risk.</disclaimer>
-        <platform>all</platform>
-        <res width="1920" height="1080" aspect="16:9" default="true" folder="720p" /> 
-    </extension>
+  <requires>
+    <import addon="xbmc.gui" version="4.0.0" />
+    <import addon="service.skin.widgets" version="0.0.27" />
+    <import addon="script.artistslideshow" version="1.5.8" />
+    <import addon="script.artwork.downloader" version="12.0.21" />
+    <import addon="script.tv.show.next.aired" version="5.0.7" />
+    <import addon="script.tvtunes" version="4.0.1" />
+    <import addon="script.simpleplaylists" version="1.1.0" />
+    <import addon="script.favourites" version="4.0.9" />
+  </requires>
+  <extension point="xbmc.gui.skin" defaultresolution="720p" defaultresolutionwide="720p" defaultthemename="textures.xbt" effectslowdown="0.75" debugging="false">
+    <res width="1280" height="720" aspect="16:9" default="true" folder="720p" />
+  </extension>
+  <extension point="xbmc.addon.metadata">
+    <summary lang="en">skin created by crookas - modded by butchabay, malexx and more.</summary>
+    <description lang="en">mod based on cirrus</description>
+    <disclaimer lang="en">no official skin use at your own risk.</disclaimer>
+    <platform>all</platform>
+    <res width="1920" height="1080" aspect="16:9" default="true" folder="720p" />
+  </extension>
 </addon>
