@@ -1,5 +1,6 @@
 [B]3.0.47[/B] (26.11.2013)
 - TvTunes updated to version 4.0.1
+- TvTunes solo mode added to DialogVideoInfo
 - Swedish language updated
 
 [B]3.0.46[/B] (20.08.2013)
